packages/rspack/tests/configCases/errors/module-build-error/webpack.config.js
module.exports = {
	entry: "./index.js",
	module: {
		rules: [
			{
				test: "\\.s[ac]ss$",
				uses: [{ builtinLoader: "sass-loader" }],
				type: "css"
			}
		]
	}
};
